@@ -1,3 +1,9 @@
+Thu Jul 11 14:48:35 2013  Zachary Scott  <e@zzak.io>
+
+	* array.c: Replace confusing example for #reverse_each in overview
+	  Patch by Earl St Sauver [Fixes documenting-ruby/ruby-12]
+	  https://github.com/documenting-ruby/ruby/pull/12
+
 Thu Jul 11 14:22:37 2013  Zachary Scott  <e@zzak.io>
 
 	* test/drb/ut_eq.rb: Use localhost for drb tests [Bug #7311]
